--- a/UI/BQimport_unimarc_aide.ui
+++ b/UI/BQimport_unimarc_aide.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>Aide</class>
+ <widget class="QDialog" name="Aide">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Aide</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
