--- a/UI/BQimport_unimarc.ui
+++ b/UI/BQimport_unimarc.ui
@@ -97,7 +97,7 @@
     <locale language="English" country="UnitedStates"/>
    </property>
    <property name="text">
-    <string>PAN2BQ version  2023-10-31      (32 champs)</string>
+    <string>PAN2BQ version  2024-05-30      (32 champs) - export 995+ sur site web BDP</string>
    </property>
    <property name="textFormat">
     <enum>Qt::AutoText</enum>
